@@ -1,3 +1,7 @@
+2017/11/29 v150
+    1. Fix support for action button of world markers.
+    2. Add support for action button of raid target.
+
 2017/09/02 v149
     1. Add support for summon random pet spell.
 
